--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <a href="#" class=" px-5 my-3 btn bg-danger-subtle text-primary rounded-start-pill rounded-end-pill">Choose Plan</a>
                 </div>
               </div>
-            <div class="position-relative me-5 pb-5 ">
+            <div class="position-relative ms-1 pb-5 ">
               <div class="package-box hot bg-primary text-white p-5 rounded-4 my-2 ">
                 <div class="card-body">
                   <h5 class="card-title pb-3 fs-2">$800</h5>
@@ -164,7 +164,7 @@
                 </div>
                 <p class="position-absolute mb-5 mx-3 top-0 end-0 bg-danger text-white rounded-start-pill rounded-end-pill px-3 py-1">Hot</p>
             </div>
-            <div class="package-box me-5 mt-5 ">
+            <div class="package-box mx-5 mt-5 ">
                 <div class="card-body mt-3">
                     <h5 class="card-title pb-3 fs-2">$1200</h5>
                     <h5 class="card-title pb-3 fs-2">Corporate event</h5>
@@ -226,7 +226,7 @@
     <section class="my-5">
       <h1 class="text-center my-5">Frequently Asked Questions</h1>
       <div class="container mt-5">
-        <div class="d-flex flex-wrap justify-content-center align-items-center ms-5 pt-5">
+        <div class="d-flex flex-wrap justify-content-center align-items-center ms-1 pt-5">
           <div class="w-50 mx-4">
             <div class="accordion" id="accordionPanelsStayOpenExample">
               <div class="accordion-item">
@@ -279,7 +279,7 @@
               </div>
             </div>
           </div>
-          <div class="">
+          <div class="me-n5">
               <img class="img-fluid" src="images/people.png" alt="">
           </div>
         </div>
